cmake_minimum_required(VERSION 3.12)
project(ek-editor-test)
#
#add_executable(${PROJECT_NAME}
#               )
#
#set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
#
##target_compile_definitions(${PROJECT_NAME} PUBLIC EK_NO_MAIN)
##target_link_libraries(${PROJECT_NAME} ek CONAN_PKG::gtest)
#
#target_link_libraries(${PROJECT_NAME} gtest gtest_main pugixml)
#target_include_directories(${PROJECT_NAME} PUBLIC ../src)
#
#set_target_properties(${PROJECT_NAME} PROPERTIES
#                      RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
#
#add_test(NAME ${PROJECT_NAME}
#         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
#         COMMAND ${PROJECT_NAME})